2003-03-03  Peter Seibel  <peter@javamonkey.com>
	    Sam Steingold  <sds@gnu.org>

	* charstrg.d, compelem.d, comptran.d, control.d, dfloat.d, eval.d:
	* ffloat.d, foreign.d, intdiv.d, intlog.d, intplus.d, intsqrt.d:
	* io.d, package.d, pathname.d, sfloat.d, socket.d, stream.d:
	phase-0 of d2c conversion: put braces where C99 requires them

2003-03-01  Sam Steingold  <sds@gnu.org>

	* makemake.in: fixed the 1.269 (2002-07-19) patch: check
	LIBTERMCAP and --with-termcap-ncurses after XCFLAGS is set,
	so that -DNO_TERMCAP_NCURSES is not overridden

2003-02-28  Sam Steingold  <sds@gnu.org>

	ANSI CL compliance issues
	* clos.lisp (generic-function): commented out the macro definition:
	GENERIC-FUNCTION is a TYPE (and a COMMON-LISP symbol) in ANSI CL,
	but not a macro, so this definition violates the standard
	* type.lisp (canonicalize-type): canonicalize MOD, SIGNED-BYTE,
	and UNSIGNED-BYTE to an inclusive interval
	* macros2.lisp (times): renamed from SPACE because SPACE is an
	ANSI Common Lisp symbol without a macro definition
	* init.lisp (times): export from EXT

2003-02-28  Sam Steingold  <sds@gnu.org>

	* io.d (PARSE-INTEGER): seclass_read
	print the error index on badsyntax
	* subr.d (parse_integer): seclass_read

2003-02-27  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object): print additional information
	for strings (using STRING-INFO)

2003-02-25  Sam Steingold  <sds@gnu.org>

	* makemake.in (*.mem): do not dump images if LOAD "init" failed

2003-02-27  Sam Steingold  <sds@gnu.org>

	detect side-effect class of some compiled closures
	* lispbibl.d (cclosure_flags, Cclosure_flags, Cclosure_seclass)
	(Cclosure_set_seclass): new macros
	(seclass_t): new enum class (instead of sclass_* bits)
	(allocate_closure): accept flags argument
	(allocate_cclosure_copy): ditto
	(seclass_object): map seclass_t to seclass_* objects
	* record.d (parse_seclass): new function
	(%make-closure): accept 4th argument - seclass